--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.6",
-    "@angular/common": "~9.0.0-rc.6",
-    "@angular/compiler": "~9.0.0-rc.6",
-    "@angular/core": "~9.0.0-rc.6",
-    "@angular/elements": "^9.0.0-rc.7",
-    "@angular/forms": "~9.0.0-rc.6",
-    "@angular/platform-browser": "~9.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
-    "@angular/router": "~9.0.0-rc.6",
+    "@angular/animations": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/elements": "^9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
     "document-register-element": "^1.7.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.7",
-    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.7",
-    "@angular/cli": "~9.0.0-rc.6",
-    "@angular/compiler-cli": "~9.0.0-rc.6",
-    "@angular/language-service": "~9.0.0-rc.6",
+    "@angular-devkit/build-angular": "~0.900.0",
+    "@angular-devkit/build-ng-packagr": "~0.900.0",
+    "@angular/cli": "~9.0.0",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -42,7 +42,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^9.0.0-rc.3",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
