feat(ui): create a UI project that imports and exports all components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
       ],
       "core": [
         "dist/core"
+      ],
+      "ui": [
+        "dist/ui/ui",
+        "dist/ui"
       ]
     }
   },
