--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@multiplicu/core",
   "version": "0.0.1",
+  "repository": {
+    "url": "git://github.com/multiplicu/ui.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "peerDependencies": {
-    "@angular/common": "^9.0.0-rc.7",
-    "@angular/core": "^9.0.0-rc.7",
+    "@angular/common": "^9.0.1",
+    "@angular/core": "^9.0.1",
     "tslib": "^1.10.0"
   }
 }
