--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,12 @@
       "dom"
     ],
     "paths": {
-      "@multiplicu/ui/button": ["dist/ui/button"],
-      "@multiplicu/ui/core": ["dist/ui/core"],
+      "@multiplicu/ui/button": [
+        "dist/ui/button"
+      ],
+      "@multiplicu/ui/core": [
+        "dist/ui/core"
+      ],
       "ui": [
         "dist/ui"
       ],
@@ -31,6 +35,14 @@
       "button": [
         "dist/button/button",
         "dist/button"
+      ],
+      "local-nav": [
+        "dist/navigation/local-nav/local-nav",
+        "dist/navigation/local-nav"
+      ],
+      "switcher": [
+        "dist/navigation/switcher/switcher",
+        "dist/navigation/switcher"
       ]
     }
   },
