chore(deps): add copyDist script to fix libraries using libraries

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@multiplicu/ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "copyDist": "rm -r node_modules/@multiplicu/ui && cp -R dist/ui node_modules/@multiplicu/ui"
   },
   "private": true,
   "repository": {
