--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.0-rc.2",
-    "@angular/common": "~9.1.0-rc.2",
-    "@angular/compiler": "~9.1.0-rc.2",
-    "@angular/core": "~9.1.0-rc.2",
-    "@angular/elements": "^9.1.0-rc.2",
-    "@angular/forms": "~9.1.0-rc.2",
-    "@angular/platform-browser": "~9.1.0-rc.2",
-    "@angular/platform-browser-dynamic": "~9.1.0-rc.2",
-    "@angular/router": "~9.1.0-rc.2",
+    "@angular/animations": "~9.1.3",
+    "@angular/common": "~9.1.3",
+    "@angular/compiler": "~9.1.3",
+    "@angular/core": "~9.1.3",
+    "@angular/elements": "^9.1.3",
+    "@angular/forms": "~9.1.3",
+    "@angular/platform-browser": "~9.1.3",
+    "@angular/platform-browser-dynamic": "~9.1.3",
+    "@angular/router": "~9.1.3",
     "document-register-element": "^1.14.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0-rc.0",
-    "@angular-devkit/build-ng-packagr": "~0.901.0-rc.0",
-    "@angular/cli": "~9.1.0-rc.0",
-    "@angular/compiler-cli": "~9.1.0-rc.2",
-    "@angular/language-service": "~9.1.0-rc.2",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular-devkit/build-ng-packagr": "~0.901.3",
+    "@angular/cli": "~9.1.3",
+    "@angular/compiler-cli": "~9.1.3",
+    "@angular/language-service": "~9.1.3",
     "@types/jasmine": "~3.5.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
