--- a/angular.json
+++ b/angular.json
@@ -350,6 +350,46 @@
           }
         }
       }
+    },
+    "nav-toggle": {
+      "projectType": "library",
+      "root": "projects/navigation/toggle",
+      "sourceRoot": "projects/navigation/toggle/src",
+      "prefix": "xcu",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/navigation/toggle/tsconfig.lib.json",
+            "project": "projects/navigation/toggle/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/navigation/toggle/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/navigation/toggle/src/test.ts",
+            "tsConfig": "projects/navigation/toggle/tsconfig.spec.json",
+            "karmaConfig": "projects/navigation/toggle/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/navigation/toggle/tsconfig.lib.json",
+              "projects/navigation/toggle/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ui"
