--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
     "codelyzer": "^5.2.1",
+    "cz-conventional-changelog": "^3.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -54,5 +55,10 @@
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
     "typescript": "~3.7.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
