--- a/projects/badge/package.json
+++ b/projects/badge/package.json
@@ -4,6 +4,7 @@
   "peerDependencies": {
     "@angular/common": "^9.1.3",
     "@angular/core": "^9.1.3",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "@multiplicu/ui": "^0.0.1"
   }
 }
