--- a/angular.json
+++ b/angular.json
@@ -470,6 +470,46 @@
           }
         }
       }
+    },
+    "snackbar": {
+      "projectType": "library",
+      "root": "projects/snackbar",
+      "sourceRoot": "projects/snackbar/src",
+      "prefix": "xcu",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/snackbar/tsconfig.lib.json",
+            "project": "projects/snackbar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/snackbar/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/snackbar/src/test.ts",
+            "tsConfig": "projects/snackbar/tsconfig.spec.json",
+            "karmaConfig": "projects/snackbar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/snackbar/tsconfig.lib.json",
+              "projects/snackbar/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ui"
