--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.3",
-    "@angular/common": "~9.1.3",
-    "@angular/compiler": "~9.1.3",
-    "@angular/core": "~9.1.3",
-    "@angular/elements": "^9.1.3",
-    "@angular/forms": "~9.1.3",
-    "@angular/platform-browser": "~9.1.3",
-    "@angular/platform-browser-dynamic": "~9.1.3",
-    "@angular/router": "~9.1.3",
+    "@angular/animations": "~10.0.0-rc.2",
+    "@angular/common": "~10.0.0-rc.2",
+    "@angular/compiler": "~10.0.0-rc.2",
+    "@angular/core": "~10.0.0-rc.2",
+    "@angular/elements": "^10.0.0-rc.2",
+    "@angular/forms": "~10.0.0-rc.2",
+    "@angular/platform-browser": "~10.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "~10.0.0-rc.2",
+    "@angular/router": "~10.0.0-rc.2",
     "document-register-element": "^1.14.3",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
-    "@angular-devkit/build-ng-packagr": "~0.901.3",
-    "@angular/cli": "~9.1.3",
-    "@angular/compiler-cli": "~9.1.3",
-    "@angular/language-service": "~9.1.3",
+    "@angular-devkit/build-angular": "~0.1000.0-rc.2",
+    "@angular-devkit/build-ng-packagr": "~0.1000.0-rc.2",
+    "@angular/cli": "~10.0.0-rc.2",
+    "@angular/compiler-cli": "~10.0.0-rc.2",
+    "@angular/language-service": "~10.0.0-rc.2",
     "@types/jasmine": "~3.5.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
@@ -45,16 +45,16 @@
     "cz-conventional-changelog": "^3.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
+    "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.2",
-    "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.3",
+    "ng-packagr": "^10.0.0-rc.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.0.0",
-    "typescript": "~3.7.5"
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.5"
   },
   "config": {
     "commitizen": {
