--- a/projects/button/package.json
+++ b/projects/button/package.json
@@ -9,7 +9,9 @@
   },
   "peerDependencies": {
     "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "tslib": "^1.10.0"
+    "@angular/core": "^9.0.0"
+},
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
