--- a/projects/form/input/package.json
+++ b/projects/form/input/package.json
@@ -4,7 +4,9 @@
   "peerDependencies": {
     "@angular/common": "^9.1.0",
     "@angular/core": "^9.1.0",
-    "tslib": "^1.10.0",
     "@multiplicu/ui": "^0.0.1"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
