--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,6 +86,12 @@
     },
     {
       "path": "./projects/faq/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/page-nav/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/page-nav/tsconfig.spec.json"
     }
   ]
 }
