chore(deps): update copyDist script to fix missing folder error

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "copyDist": "rm -r node_modules/@multiplicu/ui && cp -R dist/ui node_modules/@multiplicu/ui",
+    "copyDist": "rm -rf node_modules/@multiplicu/ui && mkdir -P node_modules/@multiplicu && cp -R dist/ui node_modules/@multiplicu/ui",
     "build:all": "./scripts/build_all.sh",
     "build:all:prod": "./scripts/build_all_prod.sh"
   },
