--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~10.0.0-rc.2",
-    "@angular/common": "~10.0.0-rc.2",
-    "@angular/compiler": "~10.0.0-rc.2",
-    "@angular/core": "~10.0.0-rc.2",
-    "@angular/elements": "^10.0.0-rc.2",
-    "@angular/forms": "~10.0.0-rc.2",
-    "@angular/platform-browser": "~10.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "~10.0.0-rc.2",
-    "@angular/router": "~10.0.0-rc.2",
+    "@angular/animations": "~10.0.5",
+    "@angular/common": "~10.0.5",
+    "@angular/compiler": "~10.0.5",
+    "@angular/core": "~10.0.5",
+    "@angular/elements": "^10.0.5",
+    "@angular/forms": "~10.0.5",
+    "@angular/platform-browser": "~10.0.5",
+    "@angular/platform-browser-dynamic": "~10.0.5",
+    "@angular/router": "~10.0.5",
     "document-register-element": "^1.14.3",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0-rc.2",
-    "@angular-devkit/build-ng-packagr": "~0.1000.0-rc.2",
-    "@angular/cli": "~10.0.0-rc.2",
-    "@angular/compiler-cli": "~10.0.0-rc.2",
-    "@angular/language-service": "~10.0.0-rc.2",
+    "@angular-devkit/build-angular": "~0.1000.4",
+    "@angular-devkit/build-ng-packagr": "~0.1000.4",
+    "@angular/cli": "~10.0.4",
+    "@angular/compiler-cli": "~10.0.5",
+    "@angular/language-service": "~10.0.5",
     "@types/jasmine": "~3.5.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
@@ -52,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.2",
-    "ng-packagr": "^10.0.0-rc.0",
+    "ng-packagr": "^10.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
     "tslint": "~6.1.0",
