feat(list): create List library for navigation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -81,6 +81,10 @@
       "checkbox": [
         "dist/form/checkbox/checkbox",
         "dist/form/checkbox"
+      ],
+      "list": [
+        "dist/navigation/list/list",
+        "dist/navigation/list"
       ]
     }
   },
