--- a/projects/navigation/list/package.json
+++ b/projects/navigation/list/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "list",
+  "name": "@multiplicu/ui/navigation/list",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.5",
