--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,6 +97,12 @@
     },
     {
       "path": "./projects/navigation/list/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/slide-over/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/slide-over/tsconfig.spec.json"
     }
   ]
 }
