--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,12 @@
     },
     {
       "path": "./projects/slide-over/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/form/select/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/form/select/tsconfig.spec.json"
     }
   ]
 }
