feat(table): new Table component for universal styling

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -94,6 +94,10 @@
         "dist/form/select/select",
         "dist/form/select"
       ],
+      "table": [
+        "dist/table/table",
+        "dist/table"
+      ]
     }
   },
   "angularCompilerOptions": {
