chore(deps): upgrade to Angular 10.1.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,120 +1,107 @@
-// This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’slanguage server to improve development experience.
-// It is not intended to be used to perform a compilation.
 {
-  "files": [],
-  "references": [{
-      "path": "./projects/core/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/core/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/button/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/button/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/local-nav/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/local-nav/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/switcher/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/switcher/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/tabs/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/tabs/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/form/form-field/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/form/form-field/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/form/input/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/form/input/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/mega-menu/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/mega-menu/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/toggle/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/toggle/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/badge/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/badge/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/avatar/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/avatar/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/snackbar/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/snackbar/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/faq/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/faq/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/page-nav/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/page-nav/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/form/checkbox/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/form/checkbox/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/navigation/list/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/navigation/list/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/slide-over/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/slide-over/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/form/select/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/form/select/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/table/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/table/tsconfig.spec.json"
+  "compileOnSave": false,
+  "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist",
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
+    "experimentalDecorators": true,
+    "module": "es2020",
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "paths": {
+      "ui": [
+        "dist/ui"
+      ],
+      "core": [
+        "dist/ui/core/core",
+        "dist/ui/core"
+      ],
+      "button": [
+        "dist/ui/button/button",
+        "dist/ui/button"
+      ],
+      "local-nav": [
+        "dist/ui/navigation/local-nav/local-nav",
+        "dist/ui/navigation/local-nav"
+      ],
+      "switcher": [
+        "dist/ui/navigation/switcher/switcher",
+        "dist/ui/navigation/switcher"
+      ],
+      "nav-toggle": [
+        "dist/ui/navigation/toggle/toggle",
+        "dist/ui/navigation/toggle"
+      ],
+      "tabs": [
+        "dist/ui/navigation/tabs/tabs",
+        "dist/ui/navigation/tabs"
+      ],
+      "mega-menu": [
+        "dist/ui/navigation/mega-menu/mega-menu",
+        "dist/ui/navigation/mega-menu"
+      ],
+      "form-field": [
+        "dist/ui/form/form-field/form-field",
+        "dist/ui/form/form-field"
+      ],
+      "input": [
+        "dist/ui/form/input/input",
+        "dist/ui/form/input"
+      ],
+      "badge": [
+        "dist/ui/badge/badge",
+        "dist/ui/badge"
+      ],
+      "avatar": [
+        "dist/ui/avatar/avatar",
+        "dist/ui/avatar"
+      ],
+      "snackbar": [
+        "dist/ui/snackbar/snackbar",
+        "dist/ui/snackbar"
+      ],
+      "faq": [
+        "dist/faq/faq",
+        "dist/faq"
+      ],
+      "page-nav": [
+        "dist/navigation/page-nav/page-nav",
+        "dist/navigation/page-nav"
+      ],
+      "checkbox": [
+        "dist/form/checkbox/checkbox",
+        "dist/form/checkbox"
+      ],
+      "list": [
+        "dist/navigation/list/list",
+        "dist/navigation/list"
+      ],
+      "slide-over": [
+        "dist/slide-over/slide-over",
+        "dist/slide-over"
+      ],
+      "select": [
+        "dist/form/select/select",
+        "dist/form/select"
+      ],
+      "table": [
+        "dist/table/table",
+        "dist/table"
+      ]
     }
-  ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  }
 }
