feat(loader): create a bouncing loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,6 +105,10 @@
       "dialog": [
         "dist/feedback/dialog/dialog",
         "dist/feedback/dialog"
+      ],
+      "loader": [
+        "dist/loader/loader",
+        "dist/loader"
       ]
     }
   },
