--- a/angular.json
+++ b/angular.json
@@ -3,44 +3,6 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ui": {
-      "projectType": "library",
-      "root": "projects/ui",
-      "sourceRoot": "projects/ui/src",
-      "prefix": "xcu",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "tsConfig": "projects/ui/tsconfig.lib.json",
-            "project": "projects/ui/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/ui/tsconfig.lib.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/ui/src/test.ts",
-            "tsConfig": "projects/ui/tsconfig.spec.json",
-            "karmaConfig": "projects/ui/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/ui/tsconfig.lib.json",
-              "projects/ui/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**"]
-          }
-        }
-      }
-    },
     "core": {
       "projectType": "library",
       "root": "projects/core",
@@ -48,7 +10,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/core/tsconfig.lib.json",
             "project": "projects/core/ng-package.json"
@@ -86,7 +48,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/button/tsconfig.lib.json",
             "project": "projects/button/ng-package.json"
@@ -124,7 +86,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/local-nav/tsconfig.lib.json",
             "project": "projects/navigation/local-nav/ng-package.json"
@@ -163,7 +125,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/page-nav/tsconfig.lib.json",
             "project": "projects/navigation/page-nav/ng-package.json"
@@ -203,7 +165,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/switcher/tsconfig.lib.json",
             "project": "projects/navigation/switcher/ng-package.json"
@@ -241,7 +203,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/tabs/tsconfig.lib.json",
             "project": "projects/navigation/tabs/ng-package.json"
@@ -279,7 +241,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/form/form-field/tsconfig.lib.json",
             "project": "projects/form/form-field/ng-package.json"
@@ -319,7 +281,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/form/input/tsconfig.lib.json",
             "project": "projects/form/input/ng-package.json"
@@ -359,7 +321,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/mega-menu/tsconfig.lib.json",
             "project": "projects/navigation/mega-menu/ng-package.json"
@@ -399,7 +361,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/toggle/tsconfig.lib.json",
             "project": "projects/navigation/toggle/ng-package.json"
@@ -439,7 +401,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/badge/tsconfig.lib.json",
             "project": "projects/badge/ng-package.json"
@@ -479,7 +441,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/avatar/tsconfig.lib.json",
             "project": "projects/avatar/ng-package.json"
@@ -519,7 +481,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/snackbar/tsconfig.lib.json",
             "project": "projects/snackbar/ng-package.json"
@@ -559,7 +521,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/faq/tsconfig.lib.json",
             "project": "projects/faq/ng-package.json"
@@ -599,7 +561,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/form/checkbox/tsconfig.lib.json",
             "project": "projects/form/checkbox/ng-package.json"
@@ -639,7 +601,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/navigation/list/tsconfig.lib.json",
             "project": "projects/navigation/list/ng-package.json"
@@ -679,7 +641,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/slide-over/tsconfig.lib.json",
             "project": "projects/slide-over/ng-package.json"
@@ -719,7 +681,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/form/select/tsconfig.lib.json",
             "project": "projects/form/select/ng-package.json"
@@ -759,7 +721,7 @@
       "prefix": "xcu",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/table/tsconfig.lib.json",
             "project": "projects/table/ng-package.json"
@@ -913,5 +875,5 @@
       }
     }
   },
-  "defaultProject": "ui"
+  "defaultProject": "core"
 }
